# gamehost-one

./: LICENSE  README.md
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.cjs
apps/desktop/public/animations/: Loading.json
apps/desktop/src/: App.tsx  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: BrandName.tsx  ConsoleView.tsx  DiscordSettings.tsx  QuickCommandsPanel.tsx  ServerSettingsFields.tsx
apps/desktop/src/components/CreateServerWizard/: ModsStep.tsx  WorldStep.tsx
apps/desktop/src/components/layout/: Sidebar.tsx  TitleBar.tsx
apps/desktop/src/components/modals/: CrashModal.tsx  DeleteServerModal.tsx  ImportServerModal.tsx  JavaModal.tsx  LauncherModal.tsx
apps/desktop/src/constants/: serverOptions.ts
apps/desktop/src/hooks/: useConsoleHistory.ts  useServerMetadata.ts
apps/desktop/src/services/: clientDetector.ts  consoleParser.ts  eventBus.ts  launcherProfileManager.ts  loaderInstaller.ts  migrationService.ts  minecraftLauncher.ts  modComparator.ts  modDetection.ts  modImport.ts  modValidator.ts  versionComparator.ts  versionParser.ts  versionResolver.ts  webhookService.ts  worldImport.ts  worldValidator.ts
apps/desktop/src/utils/: zipExtractor.ts
apps/desktop/src/wizard/: MigrationWizard.tsx
docs/: crash-reporting.md  privacy-policy.md  telemetry.md
docs/release-notes/: v0.5.0.md
(+5 files in other folders)
