[package]
name = "gamehostone"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gamehostone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
sysinfo = "0.30"
local-ip-address = "0.6"
zip = "0.6"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
urlencoding = "2"
flate2 = "1"
fastnbt = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }
raw-window-handle = "0.6"

